--- a/looky.css
+++ b/looky.css
@@ -17,3 +17,8 @@ tr {
   border-bottom: 1px solid #000000;
   margin-bottom: 5px;
 }
+
+.codepen {
+  max-width: 100px; /* Set your desired max width */
+  margin: 0 auto;   /* Center the embed */
+}
