--- a/looky.css
+++ b/looky.css
@@ -22,3 +22,13 @@ tr {
   max-width: 100px; /* Set your desired max width */
   margin: 0 auto;   /* Center the embed */
 }
+
+iframe {
+  display: block;
+  margin: 0 auto;
+}
+
+div {
+  background:#000000;
+  width:50px;
+}
